--- a/config/moonraker.conf
+++ b/config/moonraker.conf
@@ -8,7 +8,7 @@ type:gpio
 pin:gpio71
 on_when_job_queued: True
 initial_state:on
-off_when_shutdown: True
+off_when_shutdown: False
 locked_while_printing: True
 restart_klipper_when_powered: False
 
