--- a/config/KlipperScreen.conf
+++ b/config/KlipperScreen.conf
@@ -1,9 +1,10 @@
-
+     
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
 #~# language = fr
 #~# theme = material-dark
+#~# confirm_estop = True
 #~# show_heater_power = True
 #~# show_scroll_steppers = True
 #~# 
