--- a/config/moonraker.conf
+++ b/config/moonraker.conf
@@ -3,15 +3,15 @@ host: 0.0.0.0
 port: 7125
 klippy_uds_address: /home/biqu/printer_data/comms/klippy.sock
 
-[power Printer Power]
-type:gpio
-pin:gpio71
-on_when_job_queued: True
-initial_state:on
-off_when_shutdown: False
-locked_while_printing: True
-restart_klipper_when_powered: False
-
+#[power Printer Power]
+#type:gpio
+#pin:gpio71
+#on_when_job_queued: True
+#initial_state:on
+#off_when_shutdown: False
+#locked_while_printing: True
+#restart_klipper_when_powered: False
+     
 [authorization]
 trusted_clients:
     10.0.0.0/8
